--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,10 +8,12 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: antiquewhite;
+  background-color: darkslateblue;
 }
 
 a {
-  color: inherit;
+  color: cornsilk;
   text-decoration: none;
 }
 
