--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 html,
 body {
   padding: 0;
@@ -13,7 +9,7 @@ body {
 }
 
 a {
-  color: cornsilk;
+  color: violet;
   text-decoration: none;
 }
 
