--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,18 +1,15 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   color: antiquewhite;
   background-color: darkslateblue;
 }
 
-a {
-  color: violet;
-  text-decoration: none;
-}
-
-* {
+/* * {
   box-sizing: border-box;
-}
+} */
